--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "mongodb": "^6.3.0"
   }
 }
