--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
+    "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
