--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,18 @@ services:
     ports:
       - "27017:27017"
 
+  api:
+    container_name: api-container
+    build: ./server
+    image: api-server
+    ports:
+      - "3333:3333"
+    command: npm start
+    links:
+      - mongo
+    depends_on:
+      - mongo
+
 
 networks:
   default:
