feat: create client Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,12 @@ services:
     environment:
       - MONGO_URI=mongodb://127.0.0.1:27017/products
 
+  client:
+    container_name: client-container
+    build: ./client
+    network_mode: host
+    ports:
+      - 3000:3000
+    working_dir: /client
+    depends_on:
+      - api
